@@ -324,14 +324,12 @@
 					return _error('onWorkflowTreePrintButtonClick(): unmanaged format parameter', this, format);
 			// END: Error handling
 
-			var sorters = this.cmfg('workflowTreeStoreGet').getSorters();
-
-			var params = Ext.clone(this.storeExtraParamsGet());
-			params[CMDBuild.core.constants.Proxy.ATTRIBUTES] = Ext.encode(this.displayedParametersNamesGet());
+			var params = this.storeExtraParamsGet();
 			params[CMDBuild.core.constants.Proxy.TYPE] = format;
 
-			if (Ext.isArray(sorters) && !Ext.isEmpty(sorters))
-				params[CMDBuild.core.constants.Proxy.SORT] = Ext.encode(sorters);
+			// Removes unwanted params to print all workflow data
+			delete params[CMDBuild.core.constants.Proxy.PAGE];
+			delete params[CMDBuild.core.constants.Proxy.LIMIT];
 
 			this.controllerPrintWindow.cmfg('panelGridAndFormPrintWindowShow', {
 				format: format,
